--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="content-section">
     <h1>File Not Found</h1>
-    <p><a href="{{ url_for('index') }}">Back</a></p>
+    <p><a href="{{ url_for('home') }}">Back</a></p>
+</div>
 {% endblock content %}
