--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,11 +1,15 @@
-<table>
+<table class="table table-hover">
     <tr vertical-align='top'>
-        <td><img src="{{ post.author.avatar(36) }}"></td>
+        <td width='70px' class="align-middle">
+            <img src="{{ post.author.avatar(36) }}">
+        </td>
         <td>
             <a href="{{ url_for('user', username=post.author.username) }}">
                 {{ post.author.username }}
             </a>
-            says:<br>{{ post.body }}
+            says:
+            <br>
+            {{ post.body }}
         </td>
     </tr>
 </table>
