--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,36 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Required meta tags -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+        <!-- Custom CSS -->
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+        
+        <!-- Title -->
         {% if title %}
         <title>{{ title }} - MegaBlog</title>
         {% else %}
-        <title>Welcome to Data Park</title>
+        <title>Welcome to MegaBlog</title>
         {% endif %}
+        
+        
     </head>
     <body>
-        <div>Data-Park: 
-            <a href="{{ url_for('index') }}">Home</a>
-            {% if current_user.is_anonymous %}
-            <a href="{{ url_for('login') }}">Login</a>
-            {% else %}
-            <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-            <a href="{{ url_for('logout') }}">Logout</a>
-            <a href="{{ url_for('explore') }}">Explore</a>
-            {% endif %}
-        </div>
-        <hr>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul>
-            {% for message in messages %}
-            <li style='color: red;'>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
-        {% block content %}{% endblock content %}
+        <header class="site-header">
+            <!-- Navigation -->
+            <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
+                <div class="container">
+                    <a class="navbar-brand" href="{{ url_for('explore') }}">MegaBlog</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarToggle">
+                        <div class="navbar-nav mr-auto">
+                                <a class="nav-item nav-link" href="{{ url_for('home') }}">Home </a>
+                                <a class="nav-item nav-link" href="{{ url_for('explore') }}">Explore</a>
+                        </div>
+                        <div class='navbar-nav ms-auto'>
+                            {% if current_user.is_anonymous %}
+                                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                            {% else %}
+                                <a class="nav-item nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+                                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main role='main' class='container'>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="content-section">
+                        <p>Here it comes info from the user</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                                {% for message in messages %}
+                                <div class="alert alert-primary" role="alert">{{ message }}</div>
+                                {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+                    {% block content %}{% endblock content %}
+                </div>
+                <div class="col-md-3">
+                    <div class="content-section">
+                        <h3>Topics</h3>
+                        <br>
+                        <!-- <p class='text-muted'>You can put any information here you'd like. -->
+                        <ul class="list-group">
+                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Python</a></li>
+                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">SQL</a></li>
+                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Data Analysis</a></li>
+                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Machine Learning</a></li>
+                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Data Science</a></li>
+                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Web Development</a></li>
+                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">more...</a></li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </main>
+        
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
