--- a/app/templates/reset_password_request.html
+++ b/app/templates/reset_password_request.html
@@ -1,15 +1,24 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Reset Password</h1>
-    <form action="" method='post'>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.email.label }}<br>
-            {{ form.email(size=64) }}<br>
-            {% for error in form.email.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
+    <div class="content-section">
+        <form action="" method='post'>
+            {{ form.hidden_tag() }}
+            <fieldset class='form-group'>
+                <legend class='border-bottom mb-4'>Reset Password</legend>
+                <p>
+                    {{ form.email.label }}<br>
+                    {{ form.email(size=64) }}<br>
+                    {% if form.email.errors %}
+                        {% for error in form.email.errors %}
+                        <span style="color: red;">[{{ error }}]</span>
+                        {% endfor %}
+                    {% endif %}
+                </p>
+            </fieldset>
+            <div>
+                {{ form.submit(class='btn btn-outline-info') }}
+            </div>
+        </form>
+    </div>
+    
 {% endblock content %}
