--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,15 +1,15 @@
-<table class="table table-hover">
-    <tr vertical-align='top'>
+<table class="table table-borderless table-hover">
+    <tr class="align-middle">
         <td width='70px' class="align-middle">
-            <img src="{{ post.author.avatar(36) }}">
+            <img class="rounded-circle article-img" src="{{ post.author.avatar(120) }}">
         </td>
         <td>
             <a href="{{ url_for('user', username=post.author.username) }}">
                 {{ post.author.username }}
             </a>
-            said {{ moment(post.timestamp).fromNow() }}:
+            wrote {{ moment(post.timestamp).fromNow() }}:
             <br>
-            {{ post.body }}
+            {{ post.body | safe }}
         </td>
     </tr>
 </table>
