--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,6 +22,7 @@
         <!-- Time with Flask Moment -->
         {{ moment.include_moment() }}
         {{ moment.locale('en-gb') }}
+        {{ pagedown.include_pagedown() }}
         
     </head>
     <body>
@@ -42,6 +43,7 @@
                             {% if current_user.is_anonymous %}
                                 <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                             {% else %}
+                                <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
                                 <a class="nav-item nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
                                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                             {% endif %}
