tyied richier markdown styled home

--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,4 +1,4 @@
-<table class="table table-borderless table-hover">
+<table class="table table-borderless">
     <tr class="align-middle">
         <td width='70px' class="align-middle">
             <img class="rounded-circle article-img" src="{{ post.author.avatar(120) }}">
