--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -71,17 +71,16 @@
                     <div class="content-section">
                         <h3>Topics</h3>
                         <br>
-                        <!-- <p class='text-muted'>You can put any information here you'd like. -->
-                        <ul class="list-group">
-                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Python</a></li>
-                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">SQL</a></li>
-                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Data Analysis</a></li>
-                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Machine Learning</a></li>
-                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Data Science</a></li>
-                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">Web Development</a></li>
-                            <li class="list-group-item list-group-item-light"><a class="sidebar-title" href="#">more...</a></li>
-                        </ul>
-                        </p>
+                        <div class="list-group">
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Python</a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-light">SQL</a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Data Analysis</a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Machine Learning</a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Data Science</a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-light">Web Development</a>
+                            <a href="#" class="list-group-item list-group-item-action list-group-item-light">more...</a>
+                        </div>
+                        <br>
                     </div>
                 </div>
             </div>
