--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,21 +1,20 @@
-<table class="table table-borderless">
-    <tr class="align-middle">
-        <td width='70px' class="align-middle">
-            <img class="rounded-circle article-img" src="{{ post.author.avatar(120) }}">
-        </td>
-        <td>
-            <a href="{{ url_for('user', username=post.author.username) }}">
-                {{ post.author.username }}
-            </a>
-            wrote {{ moment(post.timestamp).fromNow() }}:
-            <br>
-            <div>
-                {% if post.body_html %}
-                    {{ post.body_html | safe }}
-                {% else %}
-                    {{ post.body }}
-                {% endif %}
-            </div>
-        </td>
-    </tr>
-</table>
+<div class="media">
+
+    <img class="rounded-circle article-img" src="{{ post.author.avatar(64) }}">
+    <div class="media-body">
+        <div class="article-metadata">
+            <a class="mr-2" href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
+            <small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small>
+        </div>
+        {% if post.title %}
+            <h3 class='article-title'>{{ post.title }}</h3>
+        {% endif %}
+        <p class="article-content">
+            {% if post.body_html %}
+                {{ post.body_html | safe }}
+            {% else %}
+                {{ post.body }}
+            {% endif %}
+        </p>
+    </div>
+</div>
