--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,49 +1,55 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-        <table class="table table-hover">
-            <tr class="align-middle">
-                <td width="256px" class="align-middle">
-                    <img class="rounded-circle mx-auto d-block" src="{{ user.avatar(128) }}">
-                </td>
-                <td>
-                    <h1>User: {{ user.username }}</h1>
-                    {% if user.about_me %}
-                        <p>{{ user.about_me }}</p>
-                    {% endif %}
-                    {% if user.last_seen %}
-                    <p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>
-                    {% endif %}
-                    <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
-                    {% if user == current_user %}
-                        <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
-                    {% elif not current_user.is_following(user) %}
-                        <p>
-                            <form action="{{ url_for('follow', username=user.username) }}" method='post'>
-                                {{ form.hidden_tag() }}
-                                {{ form.submit(class='btn btn-outline-info', value='Follow')}}
-                            </form>
-                        </p>
-                    {% else %}
-                        <p>
-                            <form action="{{ url_for('unfollow', username=user.username) }}" method='post'>
-                                {{ form.hidden_tag() }}
-                                {{ form.submit(class='btn btn-outline-info', value='Unfollow') }}
-                            </form>
-                        </p>
-                    {% endif %}
-                </td>
-            </tr>
-        </table>
-        <hr>
-        {% for post in posts %}
-            {% include '_post.html' %}
-        {% endfor %}
-        {% if prev_url %}
-            <a href="{{ prev_url }}">Newer posts</a>
-        {% endif %}
-        {% if next_url %}
-            <a href="{{ next_url }}">Older posts</a>
-        {% endif %}
+        <div class="media">
+            <img class="rounded-circle account-img" src="{{ user.avatar(128) }}">
+            <div class="media-body">
+                <h2 class="account-heading">{{ user.username }}</h2>
+                {% if user.last_seen %}
+                    <p>Last log in: {{ moment(user.last_seen).format('LLL') }}</p>
+                {% endif %}
+                {% if user.about_me %}
+                    <p>{{ user.about_me }}</p>
+                {% endif %}
+                
+                <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
+                {% if user == current_user %}
+                    <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+                {% elif not current_user.is_following(user) %}
+                    <p>
+                        <form action="{{ url_for('follow', username=user.username) }}" method='post'>
+                            {{ form.hidden_tag() }}
+                            {{ form.submit(class='btn btn-outline-info', value='Follow')}}
+                        </form>
+                    </p>
+                {% else %}
+                    <p>
+                        <form action="{{ url_for('unfollow', username=user.username) }}" method='post'>
+                            {{ form.hidden_tag() }}
+                            {{ form.submit(class='btn btn-outline-info', value='Unfollow') }}
+                        </form>
+                    </p>
+                {% endif %}
+            </div>
+        </div>
     </div>
+    <h3>Posts created by {{ user.username }}:</h3>
+    <br>
+    <!-- posts -->
+    {% for post in posts %}
+            <article class="content-section">
+                {% include '_post.html' %}
+            </article>
+    {% endfor %}
+    <!-- pagination -->
+    <nav aria-label="...">
+        <ul class="pagination">
+            <li class="page-item {% if not prev_url %} disabled {% endif %}">
+                <a class="page-link" href="{{ prev_url or '#' }}" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item  {% if not next_url %} disabled {% endif %}">
+                <a class="page-link" href="{{ next_url or '#' }}" tabindex="+1">Next</a>
+            </li>
+        </ul>
+    </nav>
 {% endblock content %}
