--- a/app/static/main.css
+++ b/app/static/main.css
@@ -54,7 +54,7 @@ a.article-title:hover {
 }
 
 .article-content {
-    white-space: pre-line;
+    /* white-space: pre-line; */
 }
 
 .article-img {
