refactored app, Blueprints

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -53,9 +53,9 @@ a.article-title:hover {
     text-decoration: none;
 }
 
-.article-content {
-    /* white-space: pre-line; */
-}
+/* .article-content {
+    white-space: pre-line;
+} */
 
 .article-img {
     height: 65px;
