--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -26,11 +26,11 @@
     </div>
     <div class='border-top pt-3'>
         <small class='text-muted'>
-            New User? <a href="{{ url_for('register') }}">Click to Register</a>
+            New User? <a href="{{ url_for('auth.register') }}">Click to Register</a>
         </small><br>
         <small class='text-muted'>
             Forgot Your Password?
-        <a href="{{ url_for('reset_password_request') }}">Click to Reset it</a>
+        <a href="{{ url_for('auth.reset_password_request') }}">Click to Reset it</a>
         </small>
     </div>
 {% endblock content %}
