--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -2,6 +2,6 @@
 {% block content %}
 <div class="content-section">
     <h1>File Not Found</h1>
-    <p><a href="{{ url_for('home') }}">Back</a></p>
+    <p><a href="{{ url_for('main.home') }}">Back</a></p>
 </div>
 {% endblock content %}
