--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -2,5 +2,5 @@
 {% block content %}
     <h1>An unexpected error has ocurred</h1>
     <p>The administrator has been notified. Sorry for the inconvenience</p>
-    <p><a href="{{ url_for('home') }}">Back</a></p>
+    <p><a href="{{ url_for('main.home') }}">Back</a></p>
 {% endblock content %}
