--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,16 +1,20 @@
 {% extends "layout.html" %}
 {% block content %}
     <div>
-        {% if form %}
-            <div class="content-section">
-                <p>Hi, {{ current_user.username }}!</p>
-            </div>
+        <div class="content-section">
+            <h2>Hi, {{ current_user.username }}!</h2>
+        </div>
+        {% if posts %}
+            {% for post in posts %}
+                <article class="content-section">
+                    {% include '_post.html' %}
+                </article>
+            {% endfor %}
+        {% else %}
+        <div class="content-section">
+            <p>Start following people to populate your timeline 😇</p>
+        </div>
         {% endif %}
-        {% for post in posts %}
-            <article class="content-section">
-                {% include '_post.html' %}
-            </article>
-        {% endfor %}
     </div>
     <!-- pagination -->
     <nav aria-label="...">
