--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -30,22 +30,22 @@
             <!-- Navigation -->
             <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="{{ url_for('explore') }}">MegaBlog</a>
+                    <a class="navbar-brand" href="{{ url_for('main.explore') }}">MegaBlog</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarToggle">
                         <div class="navbar-nav mr-auto">
-                                <a class="nav-item nav-link" href="{{ url_for('home') }}">Home </a>
-                                <a class="nav-item nav-link" href="{{ url_for('explore') }}">Explore</a>
+                                <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home </a>
+                                <a class="nav-item nav-link" href="{{ url_for('main.explore') }}">Explore</a>
                         </div>
                         <div class='navbar-nav ms-auto'>
                             {% if current_user.is_anonymous %}
-                                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                                <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Login</a>
                             {% else %}
-                                <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
-                                <a class="nav-item nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-                                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                                <a class="nav-item nav-link" href="{{ url_for('main.new_post') }}">New Post</a>
+                                <a class="nav-item nav-link" href="{{ url_for('main.user', username=current_user.username) }}">Profile</a>
+                                <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
                             {% endif %}
                         </div>
                     </div>
