--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -13,23 +13,27 @@
                 {% endif %}
                 
                 <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
-                {% if user == current_user %}
-                    <p><a href="{{ url_for('main.edit_profile') }}">Edit your profile</a></p>
-                {% elif not current_user.is_following(user) %}
-                    <p>
-                        <form action="{{ url_for('main.follow', username=user.username) }}" method='post'>
-                            {{ form.hidden_tag() }}
-                            {{ form.submit(class='btn btn-outline-info', value='Follow')}}
-                        </form>
-                    </p>
-                {% else %}
-                    <p>
-                        <form action="{{ url_for('main.unfollow', username=user.username) }}" method='post'>
-                            {{ form.hidden_tag() }}
-                            {{ form.submit(class='btn btn-outline-info', value='Unfollow') }}
-                        </form>
-                    </p>
+                <!-- user authenticated -->
+                {% if current_user.is_authenticated %}
+                    {% if user == current_user %}
+                        <p><a href="{{ url_for('main.edit_profile') }}">Edit your profile</a></p>
+                    {% elif not current_user.is_following(user) %}
+                        <p>
+                            <form action="{{ url_for('main.follow', username=user.username) }}" method='post'>
+                                {{ form.hidden_tag() }}
+                                {{ form.submit(class='btn btn-outline-info', value='Follow')}}
+                            </form>
+                        </p>
+                    {% else %}
+                        <p>
+                            <form action="{{ url_for('main.unfollow', username=user.username) }}" method='post'>
+                                {{ form.hidden_tag() }}
+                                {{ form.submit(class='btn btn-outline-info', value='Unfollow') }}
+                            </form>
+                        </p>
+                    {% endif %}
                 {% endif %}
+                <!-- Endif -->
             </div>
         </div>
     </div>
@@ -38,7 +42,7 @@
     <!-- posts -->
     {% for post in posts %}
             <article class="content-section">
-                {% include '_post.html' %}
+                {% include 'posts/_post.html' %}
             </article>
     {% endfor %}
     <!-- pagination -->
