--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -42,7 +42,7 @@
                         <div class='navbar-nav ms-auto'>
                             {% if current_user.is_anonymous %}
                                 <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Login</a>
-                                <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Login</a>
+                                <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a>
                             {% else %}
                                 <a class="nav-item nav-link" href="{{ url_for('posts.new_post') }}">New Post</a>
                                 <a class="nav-item nav-link" href="{{ url_for('main.user', username=current_user.username) }}">Profile</a>
