--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -41,9 +41,17 @@
     <br>
     <!-- posts -->
     {% for post in posts %}
-            <article class="content-section">
-                {% include 'posts/_post.html' %}
-            </article>
+        <article class="media content-section">
+            <img src="rounded-circle article-img" alt="{{ post.author.avatar(64) }}">
+            <div class="media-body">
+                <div class="article-metadata">
+                    <a class="mr-2h" ref="{{ url_for('main.user', username=post.author.username) }}">{{ post.author.username }}</a>
+                    <small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small>
+                </div>
+                <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
+                <p class='article-content'>{{ post.body | truncate(75, true) }}</p>
+            </div>
+        </article>
     {% endfor %}
     <!-- pagination -->
     <nav aria-label="...">
