--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,18 +1,28 @@
 {% extends "layout.html" %}
 {% block content %}
     <div>
-        <div class="content-section">
-            <h2>Hi, {{ current_user.username }}!</h2>
-        </div>
+        {% if  current_user.username %}
+            <div class="content-section">
+                <h2>Hi, {{ current_user.username }}!</h2>
+            </div>
+        {% endif %}
         {% if posts %}
-            {% for post in posts %}
-                <article class="content-section">
-                    {% include 'posts/_post.html' %}
+            {% for post in posts.items %}
+                <article class="media content-section">
+                    <img class="rounded-circle article-img" src="{{ post.author.avatar(64) }}">
+                    <div class="media-body">
+                        <div class="article-metadata">
+                            <a class="mr-2h" ref="{{ url_for('main.user', username=post.author.username) }}">{{ post.author.username }}</a>
+                            <small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small>
+                        </div>
+                        <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
+                        <p class='article-content'>{{ post.body_html | safe | truncate(75, true) }}</p>
+                    </div>
                 </article>
             {% endfor %}
         {% else %}
         <div class="content-section">
-            <p>Start following users or create your posts to populate your timeline 😇</p>
+            <p>Start following users and / or create your posts to populate your timeline 😇</p>
             <a class="text-mutted" href="{{ url_for('main.home') }}">All Posts</a>
         </div>
         {% endif %}
