--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -30,7 +30,7 @@
         </small><br>
         <small class='text-muted'>
             Forgot Your Password?
-        <a href="{{ url_for('auth.reset_password_request') }}">Click to Reset it</a>
+        <a href="{{ url_for('auth.reset_password_request') }}">Click to Reset Password</a>
         </small>
     </div>
 {% endblock content %}
