--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,14 +25,14 @@
         <meta property="og:url" content="https://datapark.herokuapp.com/">
         <meta property="og:title" content="Data Park — The Python Professional Network">
         <meta property="og:description" content="All about Python and Data.">
-        <meta property="og:image" content="../static/data-park-big.png">
+        <meta property="og:image" content="{{ url_for('static', filename='data-park-big.png') }}">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://datapark.herokuapp.com/">
         <meta property="twitter:title" content="Data Park — The Python Professional Network">
         <meta property="twitter:description" content="All about Python and Data.">
-        <meta property="twitter:image" content="../static/data-park-big.png">
+        <meta property="twitter:image" content="{{ url_for('static', filename='data-park-big.png') }}">
 
         <!-- Title -->
         {% if title %}
@@ -54,7 +54,7 @@
             <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
                 <div class="container">
                     <a class="navbar-brand mr-4" href="{{ url_for('main.home') }}">
-                        <img src="../static/dp.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                        <img src="{{ url_for('static', filename='dp.svg') }}" width="30" height="30" class="d-inline-block align-top" alt="">
                         DataPark
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
