--- a/app/templates/posts/post.html
+++ b/app/templates/posts/post.html
@@ -4,7 +4,7 @@
     <img class="rounded-circle article-img" src="{{ post.author.avatar(64) }}">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="{{ url_for('main.user', username=post.author.username) }}">{{ post.author.username }}</a>
+            <a class="mr-2" href="{{ url_for('users.user', username=post.author.username) }}">{{ post.author.username }}</a>
             <small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small>
         </div>
         {% if post.title %}
