--- a/app/templates/users/user.html
+++ b/app/templates/users/user.html
@@ -16,17 +16,17 @@
                 <!-- user authenticated -->
                 {% if current_user.is_authenticated %}
                     {% if user == current_user %}
-                        <p><a href="{{ url_for('main.edit_profile') }}">Edit your profile</a></p>
+                        <p><a href="{{ url_for('users.edit_profile') }}">Edit your profile</a></p>
                     {% elif not current_user.is_following(user) %}
                         <p>
-                            <form action="{{ url_for('main.follow', username=user.username) }}" method='post'>
+                            <form action="{{ url_for('users.follow', username=user.username) }}" method='post'>
                                 {{ form.hidden_tag() }}
                                 {{ form.submit(class='btn btn-outline-info', value='Follow')}}
                             </form>
                         </p>
                     {% else %}
                         <p>
-                            <form action="{{ url_for('main.unfollow', username=user.username) }}" method='post'>
+                            <form action="{{ url_for('users.unfollow', username=user.username) }}" method='post'>
                                 {{ form.hidden_tag() }}
                                 {{ form.submit(class='btn btn-outline-info', value='Unfollow') }}
                             </form>
@@ -40,18 +40,8 @@
     <h3>Posts created by {{ user.username }}:</h3>
     <br>
     <!-- posts -->
-    {% for post in posts %}
-        <article class="media content-section">
-            <img src="rounded-circle article-img" alt="{{ post.author.avatar(64) }}">
-            <div class="media-body">
-                <div class="article-metadata">
-                    <a class="mr-2h" ref="{{ url_for('main.user', username=post.author.username) }}">{{ post.author.username }}</a>
-                    <small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small>
-                </div>
-                <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
-                <p class='article-content'>{{ post.body | truncate(75, true) }}</p>
-            </div>
-        </article>
+    {% for post in posts.items %}
+        {% include 'posts/_post_preview.html' %}
     {% endfor %}
     <!-- pagination -->
     <nav aria-label="...">
