title and svg image

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -16,22 +16,22 @@
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         
         <!-- Primary Meta Tags -->
-        <meta name="title" content="Data Park — The Python Professional Network">
+        <meta name="title" content="Data Park — Python and Data Science">
         <meta name="description" content="All about Python and Data.">
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://datapark.herokuapp.com/">
-        <meta property="og:title" content="Data Park — The Python Professional Network">
+        <meta property="og:title" content="Data Park | Python and Data Science">
         <meta property="og:description" content="All about Python and Data.">
-        <meta property="og:image" content="{{ url_for('static', filename='data-park-big.png') }}">
+        <meta property="og:image" content="{{ url_for('static', filename='data-park-big.svg') }}">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://datapark.herokuapp.com/">
-        <meta property="twitter:title" content="Data Park — The Python Professional Network">
+        <meta property="twitter:title" content="Data Park | Python and Data Science">
         <meta property="twitter:description" content="All about Python and Data.">
-        <meta property="twitter:image" content="{{ url_for('static', filename='data-park-big.png') }}">
+        <meta property="twitter:image" content="{{ url_for('static', filename='data-park-big.svg') }}">
 
         <!-- Title -->
         {% if title %}
