smaller input text form

--- a/app/templates/posts/new_post.html
+++ b/app/templates/posts/new_post.html
@@ -28,7 +28,7 @@
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.body(class='form-control form-control-sm', rows=15) }}
+                    {{ form.body(class='form-control form-control-sm', rows=15, type="text") }}
                 {% endif %}
             </div>
         </fieldset>
