--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,9 +2,10 @@
 {% block content %}
     <div>
         {% if  current_user.username %}
-            <div class="content-section">
-                <h2>Hi, {{ current_user.username }}!</h2>
-            </div>
+        <div class="text-center">
+            <h2>Hi, {{ current_user.username }}!</h2>
+        </div>
+            <br>
         {% endif %}
         {% if posts %}
             {% for post in posts.items %}
