--- a/app/templates/posts/post.html
+++ b/app/templates/posts/post.html
@@ -1,30 +1,37 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="media content-section">
-    <img class="rounded-circle article-img" src="{{ post.author.avatar(64) }}">
-    <div class="media-body">
-        <div class="article-metadata">
-            <a class="mr-2" href="{{ url_for('users.user', username=post.author.username) }}">{{ post.author.username }}</a>
-            <small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small>
+<div class="content-section">
+    <article class='article-content'>
+        <div class="media">
+            <img class="rounded-circle article-img" src="{{ post.author.avatar(64) }}">
+            <div class="media-body">
+                <div class="article-metadata">
+                    <a class="mr-2" href="{{ url_for('users.user', username=post.author.username) }}">{{ post.author.username }}</a>
+                    <small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small>
+                </div>
+                {% if post.title %}
+                    <h2><a class='article-title' href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
+                    <br>
+                {% endif %}
+            </div>
         </div>
-        {% if post.title %}
-            <h3><a class='article-title' href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h3>
-            <br>
-        {% endif %}
-        <div class="article-content">
+        <div>
             {% if post.body_html %}
                 {{ post.body_html | safe }}
             {% else %}
                 {{ post.body }}
             {% endif %}
         </div>
-        {% if post.author == current_user %}
-            <div class='text-right'>
-                <a class="btn btn-outline-info btn-sm mt-1 mb-1" href="{{ url_for('posts.update_post', post_id=post.id) }}">Update</a>
-                <button type="button" class="btn btn-outline-danger btn-sm m-1 mr-3 " data-toggle="modal" data-target="#deleteModal">Delete</button>
-            </div>
-        {% endif %}
-    </div>
+        <div>
+            {% if post.author == current_user %}
+                <div class='text-right'>
+                    <a class="btn btn-outline-info btn-sm mt-1 mb-1" href="{{ url_for('posts.update_post', post_id=post.id) }}">Update</a>
+                    <button type="button" class="btn btn-outline-danger btn-sm m-1 mr-3 " data-toggle="modal" data-target="#deleteModal">Delete</button>
+                </div>
+            {% endif %}
+        </div>
+    </article>
+
 </div>
 <!-- Modal -->
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
