--- a/app/templates/users/user.html
+++ b/app/templates/users/user.html
@@ -1,48 +1,53 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-        <div class="media">
-            <img class="rounded-circle account-img" src="{{ user.avatar(128) }}">
-            <div class="media-body">
-                <h2 class="account-heading">{{ user.username }}</h2>
-                {% if user.last_seen %}
-                    <p>Last log in: {{ moment(user.last_seen).format('LLL') }}</p>
-                {% endif %}
-                {% if user.about_me %}
-                    <p>{{ user.about_me }}</p>
-                {% endif %}
-                
-                <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
-                <!-- USER authenticated -->
-                {% if current_user.is_authenticated %}
-                    {% if user == current_user %}
-                        <p><a href="{{ url_for('users.edit_profile') }}">Edit your profile</a></p>
-                    {% elif not current_user.is_following(user) %}
-                        <p>
-                            <form action="{{ url_for('users.follow', username=user.username) }}" method='post'>
-                                {{ form.hidden_tag() }}
-                                {{ form.submit(class='btn btn-outline-info', value='Follow')}}
-                            </form>
-                        </p>
-                    {% else %}
-                        <p>
-                            <form action="{{ url_for('users.unfollow', username=user.username) }}" method='post'>
-                                {{ form.hidden_tag() }}
-                                {{ form.submit(class='btn btn-outline-info', value='Unfollow') }}
-                            </form>
-                        </p>
+        <article class='article-content'>
+            <div class="media">
+                <img class="rounded-circle account-img" src="{{ user.avatar(128) }}">
+                <div class="media-body">
+                    <h2 class="account-heading">{{ user.username }}</h2>
+                    {% if user.last_seen %}
+                        <p>Last log in: {{ moment(user.last_seen).format('LLL') }}</p>
+                        <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
                     {% endif %}
-                    {% if user != current_user %}
-                        <p>
-                            <a href="{{ url_for('messages.send_message', recipient=user.username) }}">
-                                Send private message
-                            </a>
-                        </p>
-                    {% endif %}
-                {% endif %}
-                <!-- Endif USER Authenticated -->
+                    <div>
+                        {% if user.about_me %}
+                            <p>{{ user.about_me }}</p>
+                        {% endif %}
+                        <!-- USER authenticated -->
+                        {% if current_user.is_authenticated %}
+                            {% if user == current_user %}
+                                <p><a href="{{ url_for('users.edit_profile') }}">Edit your profile</a></p>
+                            {% elif not current_user.is_following(user) %}
+                                <p>
+                                    <form action="{{ url_for('users.follow', username=user.username) }}" method='post'>
+                                        {{ form.hidden_tag() }}
+                                        {{ form.submit(class='btn btn-outline-info', value='Follow')}}
+                                    </form>
+                                </p>
+                            {% else %}
+                                <p>
+                                    <form action="{{ url_for('users.unfollow', username=user.username) }}" method='post'>
+                                        {{ form.hidden_tag() }}
+                                        {{ form.submit(class='btn btn-outline-info', value='Unfollow') }}
+                                    </form>
+                                </p>
+                            {% endif %}
+                            {% if user != current_user %}
+                                <p>
+                                    <a class="btn btn-outline-info btn-sm mt-1 mb-1"
+                                        href="{{ url_for('messages.send_message', recipient=user.username) }}">
+                                        Send private message
+                                    </a>
+                                </p>
+                            {% endif %}
+                        {% endif %}
+                    </div>
+                </div>
             </div>
-        </div>
+            <br>
+            
+        </article>
     </div>
     <h3>Posts created by {{ user.username }}:</h3>
     <br>
