--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,10 +4,10 @@
         <form action="" method="post" novalidate>
             {{ form.hidden_tag() }}
             <fieldset class='form-group'>
-                <legend class='border-bottom mb-4'>Sign In</legend>
+                <legend class='mb-4'>Sign In</legend>
                 <p>
                     {{ form.email.label }}<br>
-                    {{ form.email(type="email", class="form-control", placeholder="Enter email") }}
+                    {{ form.email(type="email", class="form-control", placeholder="Enter your email") }}
                     {% for error in form.email.errors %}
                         <span style='color: red;'>[{{ error }}]</span>
                     {% endfor %}
